# icfpcontest2015

./: .gitignore  README.md  solveAll.sh
doc/: api-token
phrases/: phrase_doc.md
problems/: fetch.sh
secretbatcave/: Makefile  README  default.nix  secretbatcave.cabal  secretbatcave.nix  shell.nix  stack.yaml
secretbatcave/exe/: bfs-test.hs  dump-heuristic.hs  dump.hs  solve.hs
secretbatcave/src/: solve.hs
secretbatcave/src/Batcave/: BFS.hs  Commands.hs  Draw.hs  Hex.hs  IO.hs  Random.hs  RunGame.hs  Solutions.hs  Solvers.hs  Types.hs  Util.hs
secretbatcave/src/Batcave/Solver/: FloRida.hs  Lucky.hs  Nostrovia.hs
secretbatcave/test/: examples.hs  properties.hs
secretbatcave/test/Batcave/: HexSpec.hs  RunGameSpec.hs
solutions/: florida20150810T1230-incomplete.json  florida3-9.json  solution_0.json  solution_1.json  solution_14.json  solution_2.json  submit.sh
src/: Hex.hs
visual/: index.html  show-problems.sh  show-solution-heuristic.sh  show-solution.sh
visual/js/: HexagonTools.js
