name:                secretbatcave
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , aeson
                     , array
                     , text
                     , vector
                     , parallel
  exposed-modules:     Batcave.Commands
                     , Batcave.Hex
                     , Batcave.Random
                     , Batcave.Types
                     , Batcave.IO
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -funbox-strict-fields

executable solve
  default-language:    Haskell2010
  hs-source-dirs:      exe
  main-is:             solve.hs
  build-depends:       base
                     , secretbatcave
                     , optparse-applicative
                     , aeson
                     , bytestring
                     , text
                     , parallel

test-suite examples
  build-depends:       base >=4.7 && <5
                     , hspec
                     , directory
                     , secretbatcave
  hs-source-dirs:      test
  main-is:             examples.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
