name:                secretbatcave
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <5
                     , bytestring
                     , aeson
                     , array
                     , diagrams-lib
                     , diagrams-svg
                     , text
                     , mtl
                     , QuickCheck
                     , vector
                     , parallel
                     , containers
                     , fgl
  exposed-modules:     Batcave.BFS
                     , Batcave.Commands
                     , Batcave.Draw
                     , Batcave.Hex
                     , Batcave.Random
                     , Batcave.RunGame
                     , Batcave.Types
                     , Batcave.IO
                     , Batcave.Solver.Lucky
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -funbox-strict-fields

executable solve
  default-language:    Haskell2010
  hs-source-dirs:      exe
  main-is:             solve.hs
  build-depends:       base
                     , secretbatcave
                     , optparse-applicative
                     , aeson
                     , bytestring
                     , text
                     , parallel

executable dump
  default-language:    Haskell2010
  hs-source-dirs:      exe
  main-is:             dump.hs
  build-depends:       base
                     , aeson
                     , array
                     , bytestring
                     , secretbatcave
                     , text
                     , vector

test-suite examples
  build-depends:       base >=4.7 && <5
                     , hspec
                     , directory
                     , secretbatcave
  hs-source-dirs:      test
  main-is:             examples.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0

test-suite properties
  build-depends:       base >=4.8 && <5
                     , QuickCheck
                     , secretbatcave
                     , array
                     , hspec
                     , mtl
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  other-modules:       Batcave.HexSpec
